<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    app:key="dbFiltering"
    app:title="@string/settings_screen_db_filtering">

    <Preference
        app:key="dbFilteringStatus"
        app:persistent="false"
        app:selectable="false"
        app:title="@string/db_filtering_status" />

    <Preference
        app:key="dbFilteringInfo"
        app:persistent="false"
        app:summary="@string/db_filtering_info_summary"
        app:title="@string/db_filtering_info" />

    <PreferenceCategory app:title="@string/db_filtering_category_what">

        <SwitchPreferenceCompat
            app:key="dbFilteringEnabled"
            app:summary="@string/db_filtering_enabled_summary"
            app:title="@string/db_filtering_enabled" />

        <EditTextPreference
            app:key="dbFilteringPattern"
            app:title="@string/db_filtering_pattern" />

        <SwitchPreferenceCompat
            app:key="dbFilteringKeepShortNumbers"
            app:summary="@string/db_filtering_keep_short_numbers_summary"
            app:title="@string/db_filtering_keep_short_numbers" />

        <net.evolution515.callblocker.preference.IntEditTextPreference
            app:defaultValue="5"
            app:key="dbFilteringKeepShortNumbersMaxLength"
            app:summary="@string/db_filtering_keep_short_numbers_max_length_summary"
            app:title="@string/db_filtering_keep_short_numbers_max_length" />

    </PreferenceCategory>

</PreferenceScreen>
