<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    app:key="phoneBlockScreen"
    app:title="@string/settings_category_phone_block">

    <Preference
        app:key="phoneBlockInfo"
        app:persistent="false"
        app:summary="@string/phone_block_info_summary"
        app:title="@string/phone_block_info" />

    <SwitchPreferenceCompat
        app:defaultValue="true"
        app:key="usePhoneBlock"
        app:summary="@string/use_phone_block_summary"
        app:title="@string/use_phone_block" />

    <EditTextPreference
        app:dependency="usePhoneBlock"
        app:key="phoneBlockToken"
        app:summary="@string/phone_block_token_summary"
        app:title="@string/phone_block_token" />

    <Preference
        app:dependency="usePhoneBlock"
        app:key="phoneBlockCheckToken"
        app:persistent="false"
        app:summary="@string/phone_block_check_token_summary"
        app:title="@string/phone_block_check_token" />

    <Preference
        app:dependency="usePhoneBlock"
        app:key="phoneBlockUpdate"
        app:persistent="false"
        app:title="@string/phone_block_update" />

</PreferenceScreen>
