<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_lookup_number"
        android:icon="@drawable/ic_search_24dp"
        android:onClick="onLookupNumberClicked"
        android:title="@string/title_lookup_number"
        app:showAsAction="collapseActionView|always" />

    <item
        android:id="@+id/menu_pause_blocking"
        android:onClick="onPauseBlockingClicked"
        android:title="@string/pause_blocking" />

    <item
        android:onClick="onOpenBlacklist"
        android:title="@string/open_blacklist_activity" />

    <item
        android:onClick="onOpenWhitelist"
        android:title="@string/open_whitelist_activity" />

    <item
        android:onClick="onOpenStatistics"
        android:title="@string/open_statistics_activity" />

    <item
        android:onClick="onOpenSettings"
        android:title="@string/open_settings_activity" />

    <item
        android:onClick="onOpenHelp"
        android:title="@string/open_help_activity" />

    <item
        android:onClick="onOpenAbout"
        android:title="@string/open_about_activity" />

</menu>